# KikiBoilerplate

./: .gitignore  pyproject.toml
bot/: __init__.py  bot.py  db_config.py  settings.py
bot/database/: v0.sqlite
bot/extensions/: __init__.py  example.py  system.py
bot/helpers/: database.py  log_message.py
